--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,5 +121,8 @@ dependencies {
     // mockk
     testImplementation "io.mockk:mockk:1.9.3"
 
+    // logging
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
 
 }
